# mom

./: .Stompl.cabal.swp  .gitignore  Stompl.cabal
src/client/: .Makefile.swp  .hackage-upload-doc-simple.sh.swp  .stomp-queue.cabal.swp  Makefile  changelog.md  hackage-upload-doc-simple.sh  hackage-upload-docs.sh  rqueue.cabal  stomp-queue.cabal
src/client/Network/Mom/Stompl/Client/: .Patterns.hs.swp  .Queue.hs.swp  Basic.hs  Client.hs  Exception.hi  Exception.hs  Factory.hi  Factory.hs  Mime.hs  Patterns.hs  Protocol.hs  Queue.hi  Queue.hs  Server.hs  Socket.hi  Socket.hs  State.hi  (+4 more)
src/client/license/: copyright.txt  lgpl-3.0ex.txt
src/client/sav/: Client.hs  Exception.hs  Patterns.hs  Queue.hs  Server.hs  State.hs
src/client/stomp-queue-0.0.7-docs/: Network-Mom-Stompl-Client-Queue.html
src/client/stomp-queue-0.0.7-docs/html/: doc-index.html  index-frames.html  index.html  mini_Network-Mom-Stompl-Client-Exception.html  mini_Network-Mom-Stompl-Client-Queue.html  stomp-queue.haddock
src/client/stomp-queue-0.0.8-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Patterns.html  Network-Mom-Stompl-Client-Queue.html
src/client/stomp-queue-0.1.1-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Patterns.html  Network-Mom-Stompl-Client-Queue.html
src/client/stomp-queue-0.1.2-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Patterns.html  Network-Mom-Stompl-Client-Queue.html
src/client/stomp-queue-0.1.3-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Patterns.html  Network-Mom-Stompl-Client-Queue.html
src/client/stomp-queue-0.1.4-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Patterns.html  Network-Mom-Stompl-Client-Queue.html
src/client/stomp-queue-0.2.0-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Patterns.html  Network-Mom-Stompl-Client-Queue.html
src/client/stompl-queue-0.0.7-docs/: Network-Mom-Stompl-Client-Exception.html  Network-Mom-Stompl-Client-Queue.html
src/client/test/keys/: broker.crt  broker.csr  broker.ks  broker.ks.pub
src/client/test/mimesamples/: p1.txt
src/client/test/smoke/: .client1.hs.swp  .server1.hs.swp  Ping2.hs  bridgetls.hs  cl1.hs  client1  client1.hs  conduit1.hs  contx1.hs  demo1.hs  frost  frost.hs  listen2.hs  luke.hs  ping.hs  ping2.hs  pipetx.hs  psend.hp  psend.hs  psend.prof  send2.hs  sendf  sendf.hs  sendforever  sendforever.hs  sendjp  sendjp.hs  sendtx.hs  sendtx2.hs  server1  server1.hs  t1  t1.hs  tls1.hs  tlsbridge.hs  tlssrv.hs
src/client/test/suite/: repeat.sh  responder.hs  tdialogs  tdialogs.hs  tdialogsdbg  tmime  tmime.hs  tprotocol  tprotocol.hs  tstate.hs
src/conduit/: Makefile  changelog.md  changelog.txt  hackage-upload-doc-simple.sh  stomp-conduit.cabal
src/conduit/license/: lgpl-3.0ex.txt
src/conduit/stomp-conduit-0.0.2-docs/: Network-Mom-Stompl-Client-Conduit.html
src/conduit/stomp-conduit-0.0.3-docs/: Network-Mom-Stompl-Client-Conduit.html
src/conduit/test/smoke/: multi1.hs  ping.hs
src/patterns/: .Makefile.swp  Makefile  patterns.cabal
src/patterns/bkp/: Patterns.hs  Streams.hs
src/patterns/bkp/Streams/: Streams.new.hs
src/patterns/examples/: Makefile
src/patterns/examples/basic/clients/: append.hs  async.hs  rcv.hs  store.hs  tolist.hs  tostr.hs
src/patterns/examples/basic/pairs/: ping.hs
src/patterns/examples/basic/pipes/: push.hs  worker.hs
src/patterns/examples/basic/pubsub/: sporadic.hs  wuclient.hs  wufile.hs  wuissue.hs  wuserver.hs
src/patterns/examples/basic/servers/: db.hs  file.hs  frost.hs  olleh.hs
src/patterns/examples/common/: Command.hs  Helper.hs
src/patterns/examples/device/: fork.hs  forward.hs  ifc.hs  pipe.hs  queue.hs
src/patterns/src/: .Factory.hs.swp  .Service.hs.swp  Factory.hi  Factory.hs  Service.hs  Types.hs
src/patterns/src/Network/Mom/: .Patterns.hs.swp  Device.hs  Patterns.hs
src/patterns/src/broker/: Heartbeat.hi  Heartbeat.hs  Registry.hi  Registry.hs
src/patterns/test/broker/: Registry.hs  Worker_device.hs
src/patterns/test/common/: Helper.hs
src/patterns/test/smoke/: .db.hs.swp  .db2.hs.swp  .db3.hs.swp  .err.hs.swp  .file.hs.swp  .frost.hs.swp  .hello.hs.swp  .rcv.hs.swp  .tolist.hs.swp  .worker.hs.swp  .wuclient.hs.swp  .wuclient2.hs.swp  .wuserver.hs.swp  .wuserver2.hs.swp  append.hs  async.hs  bounce.hs  bridge.hs  broker.hs  client1.hs  client2.hs  cmd.hs  conduit.hs  db.hs  db2.hs  db3.hs  demo1.hs  device1.hs  eot.hs  err.hs  file.hs  file2.hs  forward1.hs  frost.hs  hello.hs  md2broker.hs  mdbounce.hs  mdbroker.hs  mdclient1.hs  olleh.hs  (+23 more)
src/patterns/test/suite/: .basic.hs.swp  Common.hi  Common.hs  basic.hi  basic.hs  device.hs  enum.hs  streams.hi  streams.hs  types.hs
src/patterns/test/suite/broker/: .registry.hs.swp  broker.hi  broker.hs  registry.hi  registry.hs
src/stomp-patterns/: .Makefile.swp  Makefile  changelog.md  hackage-upload-doc-simple.sh  mem1.aux  mem1.hp  mem1.prof  mem1.ps  stomp-patterns.cabal
src/stomp-patterns/profiling/: mem1.aux  mem1.hp  mem1.prof  mem1.ps  pub1.aux  pub1.prof  pub1.ps  sub1.aux  sub1.hp  sub1.prof  sub1.ps
src/stomp-patterns/stomp-conduit-0.0.1-docs/: Network-Mom-Stompl-Client-Conduit.html
src/stomp-patterns/stomp-patterns-0.0.1-docs/: Network-Mom-Stompl-Patterns-Balancer.html  Network-Mom-Stompl-Patterns-Basic.html  Network-Mom-Stompl-Patterns-Bridge.html  Network-Mom-Stompl-Patterns-Desk.html
src/stomp-patterns/test/smoke/: bal1.hs  client1.hs  desk1.hs  deskcl1.hs  fwd1.hs  multi1.hs  pub1.hs  pub2.hs  push1.hs  router1.hs  server1.hs  server15.hs  server2.hs  server3.hs  server4.hs  srb1.hs  sub1.hs  sub2.hs  sub3.hs  tsb1.hs  worker1.hs  worker2.hs
src/stomp-patterns/test/suite/: .registry.hs.swp  Common.hs  advanced.hs  basic.hs  mem1.hs  registry.hs  stopsrv.sh
src/stompl/: Makefile  Stompl.cabal  changelog.md  stompl.cabal
src/stompl/Network/Mom/Stompl/: Exception.hs  Frame.hs  Parser.hs
src/stompl/test/smoke/: esc.hs  parse.hs
src/stompl/test/suite/: bench1.hs  tframe.hs  tparser.hs
(+241 files in other folders)
