Name:            stompl
Version:         0.0.1
Cabal-Version:   >= 1.8
License:         BSD3
Author:          Tobias Schoofs
Synopsis:        Library with STOMP parser and utilities;
                 STOMP Browser,
                 STOMP Clients
Build-Type:      Simple

Library
  Build-Depends:   base        >= 3.0.3.2,
                   bytestring  >= 0.9 && < 0.10,
                   utf8-string >= 0.3.6,
                   attoparsec  >= 0.9.1.1
                   
  Exposed-Modules: Network.Mom.Stompl.Frame, Network.Mom.Stompl.Parser

Executable stomplb
  Build-Depends:   base                 >= 3.0.3.2,
                   network-enumerator   >= 0.1.2,
                   bytestring           >= 0.9 && < 0.10,
                   utf8-string          >= 0.3.6,
                   attoparsec           >= 0.9.1.1,
                   filepath             >= 1.1.0.3,
                   network              >= 2.3,
                   mtl                  >= 1.1.0.2,
                   text                 >= 0.11.1.1,
                   configurator         >= 0.0.1.1,
                   hslogger             >= 1.1.4,
                   old-locale           >= 1.0.0.2,
                   old-time             >= 1.0.0.6,
                   stompl               >= 0.0.1
  Hs-Source-Dirs:  Network/Mom/Stompl
  Other-Modules:   Types, Config, 
                   Frame, Parser,
                   Logger, 
                   Sender, 
                   Server,
                   Session
  Main-Is:         stompl.hs
  ghc-options:     -Wall

Test-Suite stompl-test
  type: exitcode-stdio-1.0
  main-is: runTests.hs
  build-depends: base

