Name:            rqueue
Version:         0.0.1
Cabal-Version:   >= 1.8
License:         BSD3
Author:          Tobias Schoofs
Synopsis:        Stompl Client Library 
Build-Type:      Simple

Library
  Build-Depends:   base        >= 4.0,
                   bytestring  >= 0.9 && < 0.10,
                   utf8-string >= 0.3.6,
                   attoparsec  >= 0.9.1.1,
                   split       >= 0.1.4.1,
                   network     >= 2.3.0.4,
                   stompl      >= 0.0.1,
                   mime        >= 0.3.3

  hs-source-dirs: Network/Mom/Stompl/Client, .
                   
  Exposed-Modules: Network.Mom.Stompl.Client.Queue, Network.Mom.Stompl.Client.Exception

