Name:            rqueue
Version:         0.0.1
Cabal-Version:   >= 1.8
Copyright:       Copyright (c) Tobias Schoofs, 2011
License:         BSD3
Author:          Tobias Schoofs
Maintainer:      tobias.schoofs@gmx.net
Homepage:        http://github.com/toschoo/stompl
Category:        Network
Build-Type:      Simple
Synopsis:        Stompl Client Library 
Description:
  The Stompl Protocol specifies message-oriented interoperability.
  Applications connect to a message broker to send (publish)
  or receive (subscribe) messages through queues. 
  Interoperating applications do not know 
  the location or internal structure of each other.
  They see only the interfaces, /i.e./ the messages
  published and subscribed through the broker.
  
  The Stompl Client library provides abstractions
  over the Stomp protocol, it implements in particular 
  'Connection' and 'Transaction'.
  The Stompl Client Queue library provides notions for
  'Queue', 'Message' and 'Receipt'.


Library
  Build-Depends:   base        >= 4.0,
                   bytestring  >= 0.9 && < 0.10,
                   utf8-string >= 0.3.6,
                   attoparsec  >= 0.9.1.1,
                   split       >= 0.1.4.1,
                   network     >= 2.3.0.4,
                   stompl      >= 0.0.1,
                   mime        >= 0.3.3

  hs-source-dirs: Network/Mom/Stompl/Client, .
                   
  Exposed-Modules: Network.Mom.Stompl.Client.Queue, Network.Mom.Stompl.Client.Exception

