Name:            stomp-queue
Version:         0.1.4
Cabal-Version:   >= 1.8
Copyright:       Copyright (c) Tobias Schoofs, 2011 - 2014
License:         LGPL
license-file:    license/lgpl-3.0.txt
Author:          Tobias Schoofs
Maintainer:      tobias dot schoofs at gmx dot net
Homepage:        http://github.com/toschoo/mom
Category:        Network, Message-oriented Middleware, Stomp, Client
Build-Type:      Simple
Synopsis:        Stompl Client Library 
Description:
  The Stomp Protocol specifies message-oriented interoperability.
  Applications connect to a message broker to send (publish)
  or receive (subscribe) messages through queues. 
  Interoperating applications do not know 
  the location or internal structure of each other.
  They see only each other's interfaces, /i.e./ the messages
  published and subscribed through the broker.

  .
  
  The Stomp Queue library provides 
  a Stomp client, using abstractions like
  'Connection', 'Transaction', 'Queue' and 'Message'.
  This basic abstractions are implemented in the module /Queue/.
  The /Patterns/ module adds an abstraction layer
  on top of queues, in particular an implementation
  of the /client-server/ pattern.

  .

  More information, examples and a test suite are available 
  on <http://github.com/toschoo/mom>.
  The Stomp specification can be found at
  <http://stomp.github.com>.

  .

  Release History:

  .

  [0.1.4] Changes:

          . 

          - New: destroyReader and destroyWriter
  
          .

          - Patterns deprecated

  .

  [0.1.3] New Option for newWriter 'ONoContentLen'

  .

  [0.1.2] Minor changes:

          .

          - Dependency for stompl-0.1.1

          .

          - Some more enquiries into potential mem leaks,
            but more to follow

  .

  [0.1.1] Dependency for bytestring 0.10

  .

  [0.1.0] Major changes:

          .

          - Compliance with Stomp 1.2:

          .

          - There are major changes in the frame format,
            please refer to the documentation of the 
            stompl package, version 0.1.0, there are important changes
            that may impact messages for older versions!

          .

          - When generating an Ack frame,
            the /id/ header is by default taken from the /ack/ header
            in the corresponding Message frame.
            Should there be no /ack/ header or if its value is empty,
            the value of the header /message-id/ is taken.
            This behaviour complies with 1.2 
            for brokers supporting this version,
            but also continues to work with 1.1 brokers.

          .

          - It is now possible to send a Stomp frame
            to connect to a broker (the broker, of course,
            has to accept Stomp frames and process them correctly).
            There is a new Copt (/OStomp/) to support this feature.

  .

  [0.0.8] Client/Server on top of Queues.

  .

  [0.0.7] Fighting with hackagedb...

  .

  [0.0.6] Heartbeats caused a memory leak by creating 
          many Connection instances in the connection state list.
          The connections were lazily deleted, /i.e./ were
          not deleted at all.
          Connection state is now cleaned up by a strict delete.

  .

  [0.0.5] Major changes:
 
          .

          - Underscore functions (/withConnection_/) removed; 

          .

          - New /with*/ functions: /withWriter/, /withPair/;

          .

          - New option for connection (ClientId);

          .

          - Headers for broker-specific options can be passed to connection
            (this changes the /withConnection/ type signature!)

  .

  [0.0.3] New interface writeAdHoc

  .

  [0.0.2] Minor corrections
          
  .

  [0.0.1] Initial release


Library
  Build-Depends:   base        >= 4.0 && <= 5.0,
                   bytestring  >= 0.10,
                   utf8-string >= 0.3.6,
                   attoparsec  >= 0.9.1.1,
                   split       >= 0.1.4.1,
                   network     >= 2.4.0.0,
                   stompl      >= 0.1.1,
                   mime        >= 0.3.3,
                   time        >= 1.1.4

  hs-source-dirs: Network/Mom/Stompl/Client, .
                   
  Exposed-Modules: Network.Mom.Stompl.Client.Queue, 
                   Network.Mom.Stompl.Client.Exception,
                   Network.Mom.Stompl.Client.Patterns
  other-modules: Socket, Protocol, State, Factory

