Name:            stomp-queue
Version:         0.3.1
Cabal-Version:   >= 1.8
Copyright:       Copyright (c) Tobias Schoofs, 2011 - 2016
License:         LGPL
license-file:    license/lgpl-3.0ex.txt
Author:          Tobias Schoofs
Maintainer:      tobias dot schoofs at gmx dot net
Homepage:        http://github.com/toschoo/mom
Category:        Network, Message-oriented Middleware, Stomp, Client
Build-Type:      Simple
Synopsis:        Stompl Client Library 
extra-source-files: changelog.md
Description:
  The Stomp Protocol specifies message-oriented interoperability.
  Applications connect to a message broker to send (publish)
  or receive (subscribe) messages through queues. 
  Interoperating applications do not know 
  the location or internal structure of each other.
  They see only each other's interfaces, /i.e./ the messages
  published and subscribed through the broker.

  .
  
  The Stomp Queue library provides 
  a Stomp client, using abstractions like
  'Connection', 'Transaction', 'Queue' and 'Message'.
  The library may use TLS for secure connections 
  to brokers that provide security over TLS.

  .

  More information, examples and a test suite are available 
  on <http://github.com/toschoo/mom>.
  The Stomp specification can be found at
  <http://stomp.github.com>.


Library
  Build-Depends:   base                >= 4.0 && <= 5.0,
                   bytestring          >= 0.10,
                   utf8-string         >= 0.3.6,
                   attoparsec          >= 0.9.1.1,
                   split               >= 0.1.4.1,
                   mtl                 >= 2.2.0.1,
                   conduit             >= 1.2.3.1,
                   conduit-extra       >= 1.1.6.2,
                   network-conduit-tls >= 1.1.0.2,
                   stompl              >= 0.5.0,
                   mime                >= 0.3.3,
                   time                >= 1.1.4

  hs-source-dirs: Network/Mom/Stompl/Client, .
                   
  Exposed-Modules: Network.Mom.Stompl.Client.Queue, 
                   Network.Mom.Stompl.Client.Exception,
                   Network.Mom.Stompl.Client.Patterns
  other-modules: Stream, State, Factory

