Name:            stomp-conduit
Version:         0.1.0
Cabal-Version:   >= 1.8
Copyright:       Copyright (c) Tobias Schoofs, 2013 - 2015
License:         LGPL
license-file:    license/lgpl-3.0ex.txt
Author:          Tobias Schoofs
Maintainer:      tobias dot schoofs at gmx dot net
Homepage:        http://github.com/toschoo/mom
Category:        Network, Message-oriented Middleware, Stomp, Client, Conduit
Build-Type:      Simple
Synopsis:        Stompl Conduit Client
extra-source-files: changelog.md
Description:
  The Stomp Protocol specifies message-oriented interoperability.
  Applications connect to a message broker to send (publish)
  or receive (subscribe) messages through queues. 
  Interoperating applications do not know 
  the location or internal structure of each other.
  They see only each other's interfaces, /i.e./ the messages
  published and subscribed through a broker.

  .
  
  The Stomp Queue library provides 
  a Stomp client, using abstractions like 'Reader' and 'Writer' Queues.
  The Stomp Conduit library provides an abstraction level
  on top of queues, where not single messages are in the focus
  of the API, but streams of messages,
  either infinite streams or
  multipart messages with an explicit last message segment.
  The latter concept is
  an extension of the Stomp specification.

  .

  More information, examples and a test suite are available 
  on <http://github.com/toschoo/mom>.
  The Stomp specification can be found at
  <http://stomp.github.com>.

Library
  Build-Depends:   base        >= 4.0 && <= 5.0,
                   stomp-queue >= 0.1.1,
                   stompl      >= 0.1.1,
                   conduit     >= 1.0.8,
                   mtl         >= 2.1.2,
                   resourcet   >= 1.1.2.2,
                   mime        >= 0.3.3

  hs-source-dirs: Network/Mom/Stompl/Client, .
                   
  Exposed-Modules: Network.Mom.Stompl.Client.Conduit


