Name:            patterns
Version:         0.0.3
Cabal-Version:   >= 1.14.0
Copyright:       Copyright (c) Tobias Schoofs, 2011 - 2012
License:         LGPL
license-file:    license/lgpl-3.0.txt
Author:          Tobias Schoofs
Maintainer:      tobias dot schoofs at gmx dot net
Category:        Network, Message-oriented Middleware, zeromq
Homepage:        http://github.com/toschoo/mom
Build-Type:      Simple
Synopsis:        Common patterns in message-oriented applications
Description:

  In distributed, message-oriented applications,
  similar communication patterns are used over and over again,
  such as Server\/Client (a.k.a Request\/Response),
          Publish\/Subscribe,
          Pipline (a.k.a. Push\/Pull) and
          Exclusive Pair (a.k.a. Peer-to-Peer).
  The Patterns package implements those patterns based on zeromq.

  More information on zeromq can be found at
  <http://www.zeromq.org>.

  More examples and a test suite are available 
  on <http://github.com/toschoo/mom>.

Library
  Build-Depends:   base        >= 4.5 && <= 5.0,
                   bytestring  >= 0.9.2.1,
                   utf8-string >= 0.3.7,
                   containers >= 0.4.2.1,
                   zeromq-haskell >= 0.8.4,
                   enumerator >= 0.4.18,
                   mtl         >= 2.0.1.0,
                   time        >= 1.4

  default-language: Haskell98

  hs-source-dirs: src/Network/Mom, src
                   
  Exposed-Modules: Network.Mom.Patterns, 
                   Network.Mom.Patterns.Basic,
                   Network.Mom.Patterns.Device,
                   Network.Mom.Patterns.Enumerator
  other-modules: Factory, Types, Service

  ghc-options: -Wall

