Name:            patterns
Version:         0.1.1
Cabal-Version:   >= 1.14.0
Copyright:       Copyright (c) Tobias Schoofs, 2011 - 2013
License:         LGPL
license-file:    license/lgpl-3.0.txt
Author:          Tobias Schoofs
Maintainer:      tobias dot schoofs at gmx dot net
Category:        Network, Message-oriented Middleware, zeromq
Homepage:        http://github.com/toschoo/mom
Build-Type:      Simple
Synopsis:        Common patterns in message-oriented applications
Description:

  In distributed, message-oriented applications,
  similar communication patterns are used over and over again,
  such as Server\/Client (a.k.a Request\/Response),
          Publish\/Subscribe,
          Pipline (a.k.a. Push\/Pull) and
          Exclusive Pair (a.k.a. Peer-to-Peer).
  The Patterns package implements those patterns based on zeromq.

  More information on zeromq can be found at
  <http://www.zeromq.org>.

  More examples and a test suite are available 
  on <http://github.com/toschoo/mom>.

  .

  Release History:

  .

  [0.1.1] Client (Basic and MDP):
          checkResult added;
          MDP Broker:
          Many brokers in one process.

  .

  [0.1.0] Major Review:
          Conduits replace enumerators,
          Interfaces simplified to ByteString,
          Interfaces simplified in general,
          Advanced patterns:
          Majordomo Broker.

  .

  [0.0.1] Initial Release.

-- with libzmq 2.1, 2.2 is broken!
Library
  Build-Depends:   base        >= 4.5 && <= 5.0,
                   bytestring  >= 0.9.2.1,
                   utf8-string >= 0.3.7,
                   containers >= 0.4.2.1,
                   zeromq-haskell >= 0.8.4, 
                   conduit >= 1.0.7.1,
                   mtl     >= 2.0.1.0,
                   time    >= 1.4

  default-language: Haskell98

  hs-source-dirs: src/Network/Mom, src, src/broker
                   
  Exposed-Modules: Network.Mom.Patterns, 
                   Network.Mom.Patterns.Streams,
                   Network.Mom.Patterns.Types,
                   Network.Mom.Patterns.Basic,
                   Network.Mom.Patterns.Basic.Client,
                   Network.Mom.Patterns.Basic.Server,
                   Network.Mom.Patterns.Basic.Publisher,
                   Network.Mom.Patterns.Basic.Subscriber,
                   Network.Mom.Patterns.Basic.Puller,
                   Network.Mom.Patterns.Basic.Pusher,
                   Network.Mom.Patterns.Broker,
                   Network.Mom.Patterns.Broker.Common,
                   Network.Mom.Patterns.Broker.Broker,
                   Network.Mom.Patterns.Broker.Server,
                   Network.Mom.Patterns.Broker.Client
  other-modules: Factory, Heartbeat, Registry

  ghc-options: -Wall

