Name:            stompl
Version:         0.0.1
Cabal-Version:   >= 1.8
License:         BSD3
Author:          Tobias Schoofs
Synopsis:        Library with STOMP parser and utilities;
Build-Type:      Simple

Library
  Build-Depends:   base        >= 4.0, 
                   bytestring  >= 0.9 && < 0.10,
                   utf8-string >= 0.3.6,
                   attoparsec  >= 0.9.1.1,
                   split       >= 0.1.4.1,
                   mime        >= 0.3.3
                   -- 3.0.3.2,
                   
  Exposed-Modules: Network.Mom.Stompl.Frame, Network.Mom.Stompl.Parser

