Name:            stompl
Category:        Message-Oriented Middleware, Network, Stomp, Parser
Version:         0.5.0
Cabal-Version:   >= 1.8
Copyright:       Copyright (c) Tobias Schoofs, 2011 - 2016
License:         LGPL
license-file:    license/lgpl-3.0ex.txt
Author:          Tobias Schoofs
Maintainer:      tobias dot schoofs at gmx dot net
Homepage:        http://github.com/toschoo/mom
Synopsis:        Stomp Parser and Utilities
Build-Type:      Simple
extra-source-files: changelog.md
Description:
  The Stomp Protocol specifies message-oriented interoperability.
  Applications connect to a message broker to send (publish)
  or receive (subscribe) messages through queues. 
  Interoperating applications do not know 
  the location or internal structure of each other.
  They see only each other's interfaces, /i.e./ the messages
  published and subscribed through the broker.
  
  Broker and application use a protocol based on the
  exchange of commands and other data packets, called /frames/.

  The Stompl library provides abstractions over Stomp frames
  and a Stomp frame parser.
  It does not implement a client or broker itself,
  but provides abstractions to libraries and programs doing so.
  It is used by the Stompl Queue library (stomp-queues).

  More documentation and a test suite can be found on 
  <https://github.com/toschoo/mom/>.
  The Stomp specification can be found at
  <http://stomp.github.com>.

Library
  Build-Depends:   base        >= 4.0 && < 5.0,
                   bytestring  >= 0.10, 
                   utf8-string >= 0.3.6,
                   word8       >= 0.1.2,
                   attoparsec  >= 0.10,
                   split       >= 0.1.4.1,
                   mime        >= 0.4,
                   text        >= 1.0
                   -- 3.0.3.2,
                   
  Exposed-Modules: Network.Mom.Stompl.Frame, Network.Mom.Stompl.Parser

